Added FA + Elements

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
-<link rel="stylesheet" type="text/css" href="./css/app.css">
+<link rel="stylesheet" type="text/css" href="https://unpkg.com/spectre.css/dist/spectre.min.css" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" />
+<link rel="stylesheet" type="text/css" href="./css/app.css" />
+<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 <div id="wrapper">
 	<h1>This is the primary heading and there should only be one of these per page</h1>
@@ -181,15 +182,11 @@
 			</p>
 		</blockquote>
 
-		<pre>
-			<code>
-				#header h1 a {
-					display: block;
-					width: 300px;
-					height: 80px;
-				}
-			</code>
-		</pre>
+<pre><code>#header h1 a {
+	display: block;
+	width: 300px;
+	height: 80px;
+}</code></pre>
 
 		<h5>A sub heading which is not as important as the second, but should be used with consideration</h5>
 		<p>
@@ -426,7 +423,7 @@
 				<div>
 					<a class="button primary"> Primary</a>
 					<a class="button primary hollow"> Primary</a>
-					
+
 					<a class="button secondary"> Secondary</a>
 					<a class="button secondary hollow"> Secondary</a>
 
@@ -447,6 +444,13 @@
 				</div>
 			</fieldset>
 		</form>
+
+		<label class="control" for="control">
+			<input type="checkbox" id="id" name="name" value="value" />
+			<div class="checky"></div>
+			Hello
+			<span class="fa fa-check"></span>
+		</label>
 
 		I am <a href="something.doc">a word document</a> link, so readers know that I'm not a normal link.<br>
 		I am <a href="something.pdf">a pdf document</a> link, so readers know that I'm not a normal link.<br>
