Switch updates and vars added

--- a/index.html
+++ b/index.html
@@ -502,4 +502,11 @@
 		I am <a href="mailto:something">an email address</a> link, so readers know that I'm not a normal link.<br>
 		I am <a href="http://yourwebsite.com">an internal link</a>. Change the stylesheet's "http://yourwebsite.com" to your domain name so I don't look like an external link.<br>
 
+		  <div class="pure-css-switch dark-bg">
+		    <label>
+		      <input type="checkbox" checked="checked" class="simple-switch-input"/>
+			  <span class="simple-switch dark"></span>
+		    </label>
+		  </div>
+
 	</div>
