--- a/index.html
+++ b/index.html
@@ -490,6 +490,11 @@
 			<input type="radio" id="radio3" name="radioGroup" value="radio1" />
 			<div class="checky"></div>
 		</label>
+		<p>&nbsp;</p>
+		<label>
+			<input type="checkbox" checked="checked" class="checkSwitchInput"/>
+			<span class="checkSwitch dark"></span>
+		</label>
 
 		<p>&nbsp;</p>
 
@@ -501,12 +506,5 @@
 		I am <a href="aim:something">an AIM screenname</a> link, so readers know that I'm not a normal link.<br>
 		I am <a href="mailto:something">an email address</a> link, so readers know that I'm not a normal link.<br>
 		I am <a href="http://yourwebsite.com">an internal link</a>. Change the stylesheet's "http://yourwebsite.com" to your domain name so I don't look like an external link.<br>
-
-		  <div class="pure-css-switch dark-bg">
-		    <label>
-		      <input type="checkbox" checked="checked" class="simple-switch-input"/>
-			  <span class="simple-switch dark"></span>
-		    </label>
-		  </div>
 
 	</div>
