--- a/index.html
+++ b/index.html
@@ -4,6 +4,41 @@
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 <div id="wrapper">
+
+	<div class="row">
+		<div class="column small-12 medium-12 large-12">
+			<p>Col 1</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column small-12 medium-6 large-6">
+			<p>Col 1</p>
+		</div>
+		<div class="column small-12 medium-6 large-6">
+			<p>Col 2</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column small-12 medium-4 large-4">
+			<p>Col 1</p>
+		</div>
+		<div class="column small-12 medium-4 large-4">
+			<p>Col 2</p>
+		</div>
+		<div class="column small-12 medium-4 large-4">
+			<p>Col 3</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column small-12 medium-8 large-8">
+			<p>Col 1</p>
+		</div>
+		<div class="column small-12 medium-4 large-4">
+			<p>Col 2</p>
+		</div>
+	</div>
+
+
 	<h1>This is the primary heading and there should only be one of these per page</h1>
 	<p>A small paragraph to <em>emphasis</em> and show <strong>important</strong> bits.</p>
 	<ul>
