--- a/index.html
+++ b/index.html
@@ -5,36 +5,38 @@
 
 <div id="wrapper">
 
-	<div class="row">
-		<div class="column small-12 medium-12 large-12">
-			<p>Col 1</p>
+	<div class="grid">
+		<div class="row">
+			<div class="column small-12 medium-12 large-12">
+				<p>Col 1</p>
+			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="column small-12 medium-6 large-6">
-			<p>Col 1</p>
+		<div class="row">
+			<div class="column small-12 medium-6 large-6">
+				<p>Col 1</p>
+			</div>
+			<div class="column small-12 medium-6 large-6">
+				<p>Col 2</p>
+			</div>
 		</div>
-		<div class="column small-12 medium-6 large-6">
-			<p>Col 2</p>
+		<div class="row">
+			<div class="column small-12 medium-4 large-4">
+				<p>Col 1</p>
+			</div>
+			<div class="column small-12 medium-4 large-4">
+				<p>Col 2</p>
+			</div>
+			<div class="column small-12 medium-4 large-4">
+				<p>Col 3</p>
+			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="column small-12 medium-4 large-4">
-			<p>Col 1</p>
-		</div>
-		<div class="column small-12 medium-4 large-4">
-			<p>Col 2</p>
-		</div>
-		<div class="column small-12 medium-4 large-4">
-			<p>Col 3</p>
-		</div>
-	</div>
-	<div class="row">
-		<div class="column small-12 medium-8 large-8">
-			<p>Col 1</p>
-		</div>
-		<div class="column small-12 medium-4 large-4">
-			<p>Col 2</p>
+		<div class="row">
+			<div class="column small-12 medium-8 large-8">
+				<p>Col 1</p>
+			</div>
+			<div class="column small-12 medium-4 large-4">
+				<p>Col 2</p>
+			</div>
 		</div>
 	</div>
 
