--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" type="text/css" href="https://unpkg.com/spectre.css/dist/spectre.min.css" />
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" />
+<link rel="stylesheet" type="text/css" href="./css/general/grid.css" />
 <link rel="stylesheet" type="text/css" href="./css/app.css" />
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
