Grid now compiles!

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 	<div class="grid">
 		<div class="row">
-			<div class="column small-12 medium-12 large-12">
+			<div class="column small-12 medium-6 large-12">
+				<p>Col 1</p>
+			</div>
+			<div class="column small-12 medium-6 large-12">
 				<p>Col 1</p>
 			</div>
 		</div>
@@ -32,10 +35,10 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="column small-12 medium-8 large-8">
+			<div class="column small-12 medium-4 large-8">
 				<p>Col 1</p>
 			</div>
-			<div class="column small-12 medium-4 large-4">
+			<div class="column small-12 medium-8 large-4">
 				<p>Col 2</p>
 			</div>
 		</div>
