--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" type="text/css" href="https://unpkg.com/spectre.css/dist/spectre.min.css" />
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" />
 <link rel="stylesheet" type="text/css" href="./css/general/grid.css" />
 <link rel="stylesheet" type="text/css" href="./css/app.css" />
@@ -9,37 +8,37 @@
 	<div class="grid">
 		<div class="row">
 			<div class="column small-12 medium-6 large-12">
-				<p>Col 1</p>
+				<span>Col 1</span>
 			</div>
 			<div class="column small-12 medium-6 large-12">
-				<p>Col 1</p>
+				<span>Col 1</span>
 			</div>
 		</div>
 		<div class="row">
 			<div class="column small-12 medium-6 large-6">
-				<p>Col 1</p>
+				<span>Col 1</span>
 			</div>
 			<div class="column small-12 medium-6 large-6">
-				<p>Col 2</p>
+				<span>Col 2</span>
 			</div>
 		</div>
 		<div class="row">
 			<div class="column small-12 medium-4 large-4">
-				<p>Col 1</p>
+				<span>Col 1</span>
 			</div>
 			<div class="column small-12 medium-4 large-4">
-				<p>Col 2</p>
+				<span>Col 2</span>
 			</div>
 			<div class="column small-12 medium-4 large-4">
-				<p>Col 3</p>
+				<span>Col 3</span>
 			</div>
 		</div>
 		<div class="row">
 			<div class="column small-12 medium-4 large-8">
-				<p>Col 1</p>
+				<span>Col 1</span>
 			</div>
 			<div class="column small-12 medium-8 large-4">
-				<p>Col 2</p>
+				<span>Col 2</span>
 			</div>
 		</div>
 	</div>
@@ -77,87 +76,7 @@
 			Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
 		</p>
 
-		<table class="t1" summary="Top 10 downloaded movies in 2011 using BitTorrent, in descending order, listing number of downloads and worldwide cinema grosses">
-			<caption>
-				Most Downloaded Movies on BitTorrent, 2011
-			</caption>
-			<thead>
-				<tr>
-					<th>Rank</th>
-					<th>Movie</th>
-					<th>Downloads</th>
-					<th>Grosses</th>
-				</tr>
-			</thead>
-			<tfoot>
-				<tr>
-					<th colspan="4">torrentfreak.com</th>
-				</tr>
-			</tfoot>
-			<tbody>
-				<tr>
-					<th>1</th>
-					<td>Fast Five</td>
-					<td>9,260,000</td>
-					<td>$626,137,675</td>
-				</tr>
-				<tr>
-					<th>2</th>
-					<td>The Hangover II</td>
-					<td>8,840,000</td>
-					<td>$581,464,305</td>
-				</tr>
-				<tr>
-					<th>3</th>
-					<td>Thor</td>
-					<td>8,330,000</td>
-					<td>$449,326,618</td>
-				</tr>
-				<tr>
-					<th>4</th>
-					<td>Source Code</td>
-					<td>7,910,000</td>
-					<td>$123,278,618</td>
-				</tr>
-				<tr>
-					<th>5</th>
-					<td>I Am Number Four</td>
-					<td>7,670,000</td>
-					<td>$144,500,437</td>
-				</tr>
-				<tr>
-					<th>6</th>
-					<td>Sucker Punch</td>
-					<td>7,200,000</td>
-					<td>$89,792,502</td>
-				</tr>
-				<tr>
-					<th>7</th>
-					<td>127 Hours</td>
-					<td>6,910,000</td>
-					<td>$60,738,797</td>
-				</tr>
-				<tr>
-					<th>8</th>
-					<td>Rango</td>
-					<td>6,480,000</td>
-					<td>$245,155,348</td>
-				</tr>
-				<tr>
-					<th>9</th>
-					<td>The King’s Speech</td>
-					<td>6,250,000</td>
-					<td>$414,211,549</td>
-				</tr>
-				<tr>
-					<th>10</th>
-					<td>Harry Potter and the Deathly Hallows Part 2</td>
-					<td>6,030,000</td>
-					<td>$1,328,111,219</td>
-				</tr>
-			</tbody>
-		</table>
-
+		
 		<table>
 			<tr>
 				<th>
@@ -245,10 +164,7 @@
 			</dd>
 		</dl>
 
-		<h6>This heading plays a relatively small bit part role, if you use it at all</h6>
-		<p>
-			Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
-		</p>
+
 		<h1>
 			Level 1 heading
 		</h1>
@@ -281,12 +197,7 @@
 		<p>
 			Sed scelerisque sagittis lorem. Phasellus sodales. Nulla urna justo, vehicula in, suscipit nec, molestie sed, tellus.
 		</p>
-		<h6>
-			Level 06 Heading
-		</h6>
-		<p>
-			Sed scelerisque sagittis lorem. Phasellus sodales. Nulla urna justo, vehicula in, suscipit nec, molestie sed, tellus.
-		</p>
+
 		<blockquote>
 			<p>
 				Paragraph inside Blockquote: Nam libero leo, elementum in, dapibus a, suscipit vitae, purus. Duis arcu. Integer dignissim fermentum enim. Morbi convallis felis vel nibh. Sed scelerisque sagittis lorem.
@@ -330,100 +241,10 @@
 
 		<hr>
 
-		<ul>
-			<li>Unordered list 01</li>
-			<li>Unordered list 02</li>
-			<li>Unordered list 03
-				<ul>
-					<li>Unordered list inside list level 2</li>
-					<li>Unordered list inside list level 2
-						<ul>
-							<li>Unordered list inside list level 3</li>
-							<li>Unordered list inside list level 3</li>
-						</ul>
-					</li>
-				</ul>
-			</li>
-		</ul>
-		<ol>
-			<li>Ordered list 01</li>
-			<li>Ordered list 02</li>
-			<li>Ordered list 03
-				<ol>
-					<li>Ordered list inside list level 2</li>
-					<li>Ordered list inside list level 2
-						<ol>
-							<li>Ordered list inside list level 3</li>
-							<li>Ordered list inside list level 3</li>
-						</ol>
-					</li>
-				</ol>
-			</li>
-		</ol>
 
-		<dl>
-			<dt>
-				Description list title 01
-			</dt>
-			<dd>
-				Description list description 01
-			</dd>
-			<dt>
-				Description list title 02
-			</dt>
-			<dd>
-				Description list description 02
-			</dd>
-			<dd>
-				Description list description 03
-			</dd>
-		</dl>
 
 		<p>&nbsp;</p>
-		<table>
-			<caption>
-				Table Caption
-			</caption>
-			<thead>
-				<tr>
-					<th>
-						Table head th
-					</th>
-					<td>
-						Table head td
-					</td>
-				</tr>
-			</thead>
-			<tfoot>
-				<tr>
-					<th>
-						Table foot th
-					</th>
-					<td>
-						Table foot td
-					</td>
-				</tr>
-			</tfoot>
-			<tbody>
-				<tr>
-					<th>
-						Table body th
-					</th>
-					<td>
-						Table body td
-					</td>
-				</tr>
-				<tr>
-					<td>
-						Table body td
-					</td>
-					<td>
-						Table body td
-					</td>
-				</tr>
-			</tbody>
-		</table>
-		<p>&nbsp;</p>
+
 
 		<form action="#">
 			<fieldset>
