--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<div class="row">
 			<div class="small-12 columns">
 				<strong>A Simple Grid</strong>
+				<p>Initially, this is all that was meant to come of this. I wanted a grid that I could use whenever, with no js library attachments, no bloat and no extra addons that are just unnecessary. If you want just the grid, grab <strong class="alone">_grid.scss</strong> from <em> assets/scss/general</em> and import it into your stylesheets!</p> 
 			</div>
 		</div>
 		<div class="grid">
@@ -383,6 +384,18 @@
 					<span class="checkSwitch dark"></span>
 				</label>
 				<hr/>
+			</div>
+		</div>
+		<div class="row">
+			<div class="small-12 columns">
+				<strong>Image Filters</strong>
+				<img src="https://picsum.photos/300/300/?random">
+				<div class="imgFilter imgCover">
+					<img src="https://picsum.photos/300/300/?random">
+				</div>
+				<div class="imgFilter greyScale">
+					<img src="https://picsum.photos/300/300/?random">
+				</div>
 			</div>
 		</div>
 	</main>
