--- a/README.html
+++ b/README.html
@@ -7,25 +7,29 @@
         <h1 id="hunter-grid">Hunter Grid</h1>
 <p>Extremely lightweight, basic flex grid built from a simple sass mixin</p>
 <h2 id="getting-started">Getting Started</h2>
-<p>These instructions will get you a copy of the project up and running on your local machine for development and testing purposes. See deployment for notes on how to deploy the project on a live system.</p>
-<h3 id="prerequisites">Prerequisites</h3>
-<p>So long as you have some way to compil ethis,</p>
-<pre><code>Give examples
-</code></pre><h3 id="installing">Installing</h3>
-<p>A step by step series of examples that tell you how to get a development env running</p>
-<p>Say what the step will be</p>
-<pre><code>Give the example
-</code></pre><h2 id="built-with">Built With</h2>
-<ul>
-<li><a href="http://www.dropwizard.io/1.0.2/docs/">Dropwizard</a> - The web framework used</li>
-<li><a href="https://maven.apache.org/">Maven</a> - Dependency Management</li>
-<li><a href="https://rometools.github.io/rome/">ROME</a> - Used to generate RSS Feeds</li>
-</ul>
-<h2 id="contributing">Contributing</h2>
-<p>Please read <a href="https://gist.github.com/PurpleBooth/b24679402957c63ec426">CONTRIBUTING.md</a> for details on our code of conduct, and the process for submitting pull requests to us.</p>
-<h2 id="versioning">Versioning</h2>
-<p>We use <a href="http://semver.org/">SemVer</a> for versioning. For the versions available, see the <a href="https://github.com/your/project/tags">tags on this repository</a>.</p>
-<h2 id="authors">Authors</h2>
+<h3 id="using-breakpoint-mixin">Using Breakpoint Mixin</h3>
+<pre><code>$small : (min-width: 0)
+$smallOnly : (max-width: 767px)
+$medium : (min-width: 768px)
+$mediumOnly : (min-width: 767px) and (max-width: 991px)
+$large : (min-width: 992px)
+$xlarge : (min-width: 1200px)
+
+@mixin breakpoint($small) {
+    @content
+}
+
+</code></pre><h3 id="using-grid-markup">Using Grid Markup</h3>
+<pre><code>&lt;div class=&quot;container&quot;&gt;
+    &lt;div class=&quot;row&quot;&gt;
+        &lt;div class=&quot;small-12 medium-6 large-3 columns&quot;&gt;column&lt;/div&gt;
+        &lt;div class=&quot;small-12 medium-6 large-3 columns&quot;&gt;column&lt;/div&gt;
+        &lt;div class=&quot;small-12 medium-6 large-3 columns&quot;&gt;column&lt;/div&gt;
+        &lt;div class=&quot;small-12 medium-6 large-3 columns&quot;&gt;column&lt;/div&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
+
+</code></pre><h2 id="authors">Authors</h2>
 <ul>
 <li><strong>Ceryni</strong> - <em>Initial work</em> - <a href="https://github.com/Ceryni173">Ceryni173</a></li>
 </ul>
