--- a/README.html
+++ b/README.html
@@ -7,6 +7,13 @@
         <h1 id="hunter-grid">Hunter Grid</h1>
 <p>Extremely lightweight, basic flex grid built from a simple sass mixin</p>
 <h2 id="getting-started">Getting Started</h2>
+<p>Hunter grid contains not only a very simple grid (only 6KB minified!) but a small suite of extra settings I&#39;ve collected over the years of doing Front End. Unlike most frameworks, this grid is easy to isolate and use on it&#39;s own - the rest is just for sheer aesthetics and laziness!</p>
+<p>To isolate the grid, navigate to <strong>assets/scss/general</strong> and pick <strong>_grid.scss</strong> and add this to your own project</p>
+<p>If you wish to use the entire project, the folder structure is very simple.</p>
+<h4 id="general">General</h4>
+<p>General contains all files needed to set up a new site, from colours, helpers, form elements and mixins</p>
+<h4 id="specific">Specific</h4>
+<p>Specific contains files related to the project you&#39;re about to build.</p>
 <h3 id="defining-variables">Defining Variables</h3>
 <pre><code>$grid-gutter-medium: 30px !default;
 $grid-gutter-small: 20px !default;
