--- a/README.html
+++ b/README.html
@@ -4,10 +4,12 @@
         <title>README.md</title>
       </head>
       <body>
-        <h1 id="hunter-grid">Hunter Grid</h1>
+        <h1 id="cattle-grid">Cattle Grid</h1>
 <p>Extremely lightweight, basic flex grid built from a simple sass mixin</p>
+<h2 id="demo">Demo</h2>
+<p><a href="https://codepen.io/Ceryni17/pen/dgMYjG">Codepen (Grid Only)</a><br><a href="https://codepen.io/Ceryni17/pen/LgNBXE">Codepen (All)</a></p>
 <h2 id="getting-started">Getting Started</h2>
-<p>Hunter grid contains not only a very simple grid (only 6KB minified!) but a small suite of extra settings I&#39;ve collected over the years of doing Front End. Unlike most frameworks, this grid is easy to isolate and use on it&#39;s own - the rest is just for sheer aesthetics and laziness!</p>
+<p>Cattle grid contains not only a very simple grid (only 6KB minified!) but a small suite of extra settings I&#39;ve collected over the years of doing Front End. Unlike most frameworks, this grid is easy to isolate and use on it&#39;s own - the rest is just for sheer aesthetics and laziness!</p>
 <p>To isolate the grid, navigate to <strong>assets/scss/general</strong> and pick <strong>_grid.scss</strong> and add this to your own project</p>
 <p>If you wish to use the entire project, the folder structure is very simple.</p>
 <h4 id="general">General</h4>
