--- a/README.html
+++ b/README.html
@@ -4,7 +4,8 @@
         <title>README.md</title>
       </head>
       <body>
-        <h1 id="cattle-grid">Cattle Grid</h1>
+        <p><img src="http://ceryni.com/cattle-grid/assets/images/logo-type-small.png" alt="Cattle Grid"></p>
+<h1 id="cattle-grid">Cattle Grid</h1>
 <p>Extremely lightweight, basic flex grid built from a simple sass mixin</p>
 <h2 id="demo">Demo</h2>
 <p><a href="https://codepen.io/Ceryni17/pen/dgMYjG">Codepen (Grid Only)</a><br><a href="https://codepen.io/Ceryni17/pen/LgNBXE">Codepen (All)</a></p>
