--- a/index.html
+++ b/index.html
@@ -3,21 +3,31 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Hunter Grid</title>
+	<title>Cattle Grid</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Favicons -->
-	<link rel="shortcut icon" href="../assets/images/favicons/favicon.ico" type="image/x-icon" />
-	<link rel="apple-touch-icon" href="../assets/images/favicons/apple-touch-icon.png" />
-	<link rel="apple-touch-icon" sizes="57x57" href="../assets/images/favicons/apple-touch-icon-57x57.png" />
-	<link rel="apple-touch-icon" sizes="72x72" href="../assets/images/favicons/apple-touch-icon-72x72.png" />
-	<link rel="apple-touch-icon" sizes="76x76" href="../assets/images/favicons/apple-touch-icon-76x76.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="../assets/images/favicons/apple-touch-icon-114x114.png" />
-	<link rel="apple-touch-icon" sizes="120x120" href="../assets/images/favicons/apple-touch-icon-120x120.png" />
-	<link rel="apple-touch-icon" sizes="144x144" href="../assets/images/favicons/apple-touch-icon-144x144.png" />
-	<link rel="apple-touch-icon" sizes="152x152" href="../assets/images/favicons/apple-touch-icon-152x152.png" />
-	<link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicons/apple-touch-icon-180x180.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="./assets/images/apple-touch-icon-57x57.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="./assets/images/apple-touch-icon-114x114.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="./assets/images/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="./assets/images/apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="60x60" href="./assets/images/apple-touch-icon-60x60.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="./assets/images/apple-touch-icon-120x120.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="./assets/images/apple-touch-icon-76x76.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="./assets/images/apple-touch-icon-152x152.png" />
+	<link rel="icon" type="image/png" href="./assets/images/favicon-196x196.png" sizes="196x196" />
+	<link rel="icon" type="image/png" href="./assets/images/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="./assets/images/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="./assets/images/favicon-16x16.png" sizes="16x16" />
+	<link rel="icon" type="image/png" href="./assets/images/favicon-128.png" sizes="128x128" />
+	<meta name="application-name" content="&nbsp;"/>
+	<meta name="msapplication-TileColor" content="#FFFFFF" />
+	<meta name="msapplication-TileImage" content="mstile-144x144.png" />
+	<meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
+	<meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
+	<meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
+	<meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" />
@@ -30,8 +40,10 @@
 	<main>
 		<div class="container">
 			<div class="row">
+				<div class="small-12 columns text-center">
+					<img src="./assets/images/logo-type.png" class="logo">
+				</div>
 				<div class="small-12 columns">
-					<strong>A Simple Grid</strong>
 					<p>Initially, this is all that was meant to come of this. I wanted a grid that I could use whenever, with no js library attachments, no bloat and no extra addons that are just unnecessary. If you want just the grid, grab <strong class="alone">_grid.scss</strong> from <em> assets/scss/general</em> and import it into your stylesheets!</p>
 				</div>
 			</div>
@@ -41,6 +53,18 @@
 					<div class="small-12 medium-6 large-3 columns">column</div>
 					<div class="small-12 medium-6 large-3 columns">column</div>
 					<div class="small-12 medium-6 large-3 columns">column</div>
+				</div>
+				<div class="row">
+					<div class="small-12 large-4 columns">column</div>
+					<div class="small-12 large-4 columns">column</div>
+					<div class="small-12 large-4 columns">column</div>
+				</div>
+				<div class="row">
+					<div class="small-12 large-6 columns">column</div>
+					<div class="small-12 large-6 columns">column</div>
+				</div>
+				<div class="row">
+					<div class="small-12 columns">column</div>
 				</div>
 			</div>
 			<div class="row">
