--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 					<img src="./assets/images/logo-type.png" class="logo">
 				</div>
 				<div class="small-12 columns">
-					<p>Initially, this is all that was meant to come of this. I wanted a grid that I could use whenever, with no js library attachments, no bloat and no extra addons that are just unnecessary. If you want just the grid, grab <strong class="alone">_grid.scss</strong> from <em> assets/scss/general</em> and import it into your stylesheets!</p>
+
+					<p>Finally got around to building my own CSS Framework after eventually becoming too annoyed at the reliance on the likes of a Foundation & Bootstrap. Foundation served me well for years, but it’s too bloated and too contaminated with elements that could be refactored and simplified. </p>
+					<p>Which leads me to today. I now have my simple 6kb responsive flex box grid I’ve named the Cattle Grid 🐮 - If you want just the grid, grab <strong class="alone">_grid.scss</strong> from <em> assets/scss/general</em> and import it into your stylesheets!</p>
 				</div>
 			</div>
 			<div class="grid">
