--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Cattle Grid</title>
-	<meta name="description" content="">
+	<meta name="description" content="Extremely lightweight, basic flex css grid built from a simple mixin">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Favicons -->
