Updated demo link

--- a/README.html
+++ b/README.html
@@ -7,7 +7,7 @@
         <p><img src="http://ceryni.com/cattle-grid/assets/images/logo-type-small.png" alt="Cattle Grid"></p>
 <p>Extremely lightweight, basic flex grid built from a simple mixin</p>
 <h2 id="demo">Demo</h2>
-<p><a href="https://codepen.io/Ceryni17/pen/dgMYjG">Codepen (Grid Only)</a><br><a href="https://codepen.io/Ceryni17/pen/LgNBXE">Codepen (All)</a></p>
+<p><a href="http://ceryni.com/cattle-grid/">Cattle Grid Example</a>   </p>
 <h2 id="getting-started">Getting Started</h2>
 <p>Cattle grid contains not only a very simple grid (only 6KB minified!) but a small suite of extra settings I&#39;ve collected over the years of doing Front End. Unlike most frameworks, this grid is easy to isolate and use on it&#39;s own - the rest is just for sheer aesthetics and laziness!</p>
 <p>To isolate the grid, navigate to <strong>assets/scss/general</strong> and pick <strong>_grid.scss</strong> and add this to your own project</p>
