--- a/README.html
+++ b/README.html
@@ -4,7 +4,7 @@
         <title>README.md</title>
       </head>
       <body>
-        <h1 id="hunter-grid">Hunter Grid</h1>
+        <h1 id="cattle-grid">Cattle Grid</h1>
 <p>Extremely lightweight, basic flex grid built from a simple sass mixin</p>
 <h2 id="getting-started">Getting Started</h2>
 <p>Hunter grid contains not only a very simple grid (only 6KB minified!) but a small suite of extra settings I&#39;ve collected over the years of doing Front End. Unlike most frameworks, this grid is easy to isolate and use on it&#39;s own - the rest is just for sheer aesthetics and laziness!</p>
