--- a/README.html
+++ b/README.html
@@ -29,8 +29,7 @@ $breakpoint-large: 1200px !default;
 $breakpoint-xlarge: 1440px !default;
 
 </code></pre><h3 id="using-breakpoint-mixin">Using Breakpoint Mixin</h3>
-<pre><code>
-@mixin breakpoint($small) {
+<pre><code>@mixin breakpoint($small) {
     @content
 }
 
