--- a/README.html
+++ b/README.html
@@ -10,7 +10,7 @@
 <p><a href="http://ceryni.com/cattle-grid/">Cattle Grid Example</a>   </p>
 <h2 id="getting-started">Getting Started</h2>
 <p>Cattle grid contains not only a very simple grid (only 6KB minified!) but a small suite of extra settings I&#39;ve collected over the years of doing Front End. Unlike most frameworks, this grid is easy to isolate and use on it&#39;s own - the rest is just for sheer aesthetics and laziness!</p>
-<p>To isolate the grid, navigate to <a href="https://github.com/ceryni173/Cattle-Grid/blob/master/assets/scss/general/_grid.scss">grid.scss</a> and add this to your own project! Simple. </p>
+<p>To isolate the grid, navigate to <a href="https://github.com/ceryni173/Cattle-Grid/blob/master/assets/scss/general/_grid.scss">grid.scss</a> and add this to your own project! Simple.</p>
 <p>If you wish to use the entire project, the folder structure is very simple.</p>
 <h4 id="general">General</h4>
 <p>General contains all files needed to set up a new site, from colours, helpers, form elements and mixins</p>
@@ -126,6 +126,23 @@ $breakpoint-xlarge: 1440px !default;
 }
 </code></pre><p>To use:</p>
 <pre><code>font-size: rem-calc(12)
+</code></pre><h3 id="font-sizes">Font sizes</h3>
+<pre><code>$z-index: (
+  modal              : 200,
+  navigation         : 100,
+  footer             : 10,
+  header                : 50,
+  main                 : 10,
+);
+
+@function z-index($key) {
+    @return map-get($z-index, $key);
+}
+@mixin z-index($key) {
+    z-index: z-index($key);
+}
+</code></pre><p>To use:</p>
+<pre><code>@include z-index(header);
 </code></pre><h2 id="authors">Authors</h2>
 <ul>
 <li><strong>Ceryni</strong> - <em>Initial work</em> - <a href="https://github.com/Ceryni173">Ceryni173</a></li>
