Added fader. Updated Readme

--- a/README.html
+++ b/README.html
@@ -126,7 +126,7 @@ $breakpoint-xlarge: 1440px !default;
 }
 </code></pre><p>To use:</p>
 <pre><code>font-size: rem-calc(12)
-</code></pre><h3 id="font-sizes">Font sizes</h3>
+</code></pre><h3 id="z-indexes">Z Indexes</h3>
 <pre><code>$z-index: (
     modal: 200,
     navigation: 100,
