--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 				<li><a href="#form">Form</a></li>
 				<li><a href="#buttons">Buttons</a></li>
 				<li><a href="#images">Images</a></li>
+				<li><a href="#fades">Fades</a></li>
 			</ul>
 		</nav>
 		<div class="container">
@@ -455,6 +456,21 @@
 						<img src="https://picsum.photos/300/300/?random">
 					</div>
 					<p>Blur</p>
+				</div>
+			</div>
+			<div class="row">
+				<div id="fades"></div>
+				<div class="small-12 columns">
+					<hr/>
+					<strong>Fades</strong>
+				</div>
+				<div class="small-12 medium-6 columns text-center">
+					<p class="fade show">Hover to hide</p>
+					<span>hello!</span>
+				</div>
+				<div class="small-12 medium-6 columns text-center">
+					<p class="fade hide">Hover to show</p>
+					<span>goodbye!</span>
 				</div>
 			</div>
 		</div>
