--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 					<img src="./assets/images/logo-type.png" class="logo">
 				</div>
 				<div class="small-12 columns">
-					<p>Finally got around to building my own CSS Framework after eventually becoming too annoyed at the reliance on the likes of a Foundation & Bootstrap. Foundation served me well for years, but it’s too bloated and too contaminated with elements that could be refactored and simplified. </p>
-					<p>Which leads me to today. I now have my simple 6kb responsive flex box grid I’ve named the Cattle Grid 🐮 - If you want just the grid, grab <strong class="alone">_grid.scss</strong> from <em> assets/scss/general</em> and import it into your stylesheets!</p>
+					<p>Finally got around to building my own CSS Framework after becoming too annoyed at the reliance on the likes of a Foundation & Bootstrap. Foundation served me well for years, but it’s too bloated and too contaminated with elements that could be refactored and simplified. </p>
+					<p>Which leads me, to this! I now have my simple 5kb responsive flex box grid I’ve named the Cattle Grid 🐮 - If you want just the grid, grab <strong class="alone">_grid.scss</strong> from <em> assets/scss/general</em> and import it into your stylesheets!</p>
 				</div>
 			</div>
 			<div id="grid"></div>
