Updated class names

--- a/README.html
+++ b/README.html
@@ -217,9 +217,9 @@ $breakpoint-xlarge: 1440px !default;
     }
 </code></pre><p><em>To use:</em></p>
 <pre><code>@extend .middle-all
-@extend .horizontal-middle
-@extend .vertical-middle
-@extend .absolute-middle
+@extend .horizontal-center
+@extend .vertical-center
+@extend .absolute-center
 
 &lt;div class=&quot;container&quot;&gt;
     &lt;div class=&quot;row align-center align-middle&quot;&gt;
